# monitoring-wiki-update-receiver

./: Procfile  README.md  pyproject.toml  tox.ini
.github/workflows/: ci.yml  deploy.yml
monitoring_wiki_receiver/: api.py
